complete first version
