# swagger/swagger.json
@@ -150,6 +150,78 @@
                 }
             }
         },
+        "/unit/": {
+            "get": {
+                "tags": [
+                    "unit"
+                ],
+                "description": "get top100 Unit",
+                "operationId": "UnitController.Get100",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Unit"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "unit"
+                ],
+                "description": "create Unit",
+                "operationId": "UnitController.CreateUser",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for unit content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Unit"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{int} models.Unit.Id"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/unit/{id}": {
+            "get": {
+                "tags": [
+                    "unit"
+                ],
+                "description": "get unit by id",
+                "operationId": "UnitController.Get",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Unit"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            }
+        },
         "/user/": {
             "get": {
                 "tags": [
@@ -366,6 +438,26 @@
                 }
             }
         },
+        "models.Unit": {
+            "title": "Unit",
+            "type": "object",
+            "properties": {
+                "Key": {
+                    "type": "string"
+                },
+                "KeySize": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Value": {
+                    "type": "string"
+                },
+                "ValueSize": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
         "models.User": {
             "title": "User",
             "type": "object",
@@ -393,6 +485,10 @@
         {
             "name": "user",
             "description": "Operations about Users\n"
+        },
+        {
+            "name": "unit",
+            "description": "Operations about Unit\n"
         }
     ]
 }
